tests/NormalTests/paczka1/fuzzy1/75869129.err
Error in line 3: m4GrDNPhB S257 56,5
Error in line 2: baRmbDQKv92 S958 43,1
Error in line 14: m4GrDNPhB S958 41,4
Error in line 22: baRmbDQKv92 S654 236,57
Error in line 21: g0Od S958 76,4
Error in line 9: baRmbDQKv92 S654 94,3
Error in line 34: o0LYKpf6d6 S958 16,3
